@@ -1,6 +1,7 @@
 
 Development version (next release)
 - Changed timing measurements to now also include the (varying) kernel launch overhead
+- It is now possible to set OpenCL compiler options through the env variable CLTUNE_BUILD_OPTIONS
 
 Version 2.5.0
 - Updated to version 8.0 of the CLCudaAPI header
